# collect4_game

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
game/: board.py  game.py
settings/: config.py  logger.py
tests/: test_board.py
